# cppbestpractices

./: 01-Getting-Started.md  02-Style-Guide.md  03-FAQ.md  04-Rants.md  LICENSE  README.md
ral-example/: .gitignore  CMakeLists.txt  file.cc  file.hpp  main.cc  package.cc  package.hpp  resource.cc  resource.hpp  service.cc  service.hpp
